--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -6,7 +6,7 @@
  i_consumer_goods: "£consumer_goods£ §I$consumer_goods$§!"
  i_unity: "£unity£ §I$unity$§!"
  i_influence: "£influence£ §I$influence$§!"
- i_research: "£physics£ £society£ £engineering£ §Iแต้มการวิจัย§!"
+ i_research: "£physics£ £society£ £engineering£ §Iแต้มการวิจัย§!"
  i_physics: "£physics£ §I$physics_research$§!"
  i_society: "£society£ §I$society_research$§!"
  i_engineering: "£engineering£ §I$engineering_research$§!"
@@ -344,3 +344,5 @@
  concept_riftworld_digsite_desc: "Anomalous seismic activity has been detected from deep inside an ancient crater on our homeworld. Underground sonar revealed a previously unknown cavity that can be explored."
  concept_cloaking_1: "$tech_cloaking_1$"
  concept_cloaking_1_desc: "- §I$UNLOCKS_FEATURE$§! Active Reconnaissance $NEW_LINE$- §I$UNLOCKS_COMPONENT$§! $CLOAKING_1$\n\n§L$tech_cloaking_1_desc$§!"
+ concept_storm_rider: "สตอร์มไรเดอร์"
+ concept_storm_rider_desc: "These daredevil leaders live their lives one cosmic storm at a time! Audacious and bold, they enjoy a shorter lifespan and become less effective when put in Council Positions."
