--- a/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
+++ b/mod/thmod/localisation/english/dlc_recommendations_l_english.yml
@@ -157,4 +157,9 @@
  DLC_ASTRAL_PLANES_RECOMMENDATION_DESC: "§S$ASTRAL_PLANES_TITLE$§! is a rich narrative expansion allowing you to explore alternative dimensions and warp reality to your whim."
  DLC_ASTRAL_PLANES_RECOMMENDATION_REC_1: "We are recommending §SAstral Planes§! as it pairs well with your §SOverlord§! DLC, allowing for further flexibility with Hyper Relays and Quantum Catapults."
  DLC_ASTRAL_PLANES_RECOMMENDATION_REC_2: "We are recommending §SAstral Planes§! as it provides a new opportunity to explore the precursors found in §SAncient Relics§!."
+ COSMIC_STORMS_TITLE: "Cosmic Storms"
+ COSMIC_STORMS_LANDINGPAGE_TITLE: "Cosmic Storms Title"
+ COSMIC_STORMS_LANDINGPAGE_DESCRIPTION: "Cosmic Storms Description"
+ COSMIC_STORMS_FEATURES: "Cosmic Storms Features"
+ DLC_COSMIC_STORMS_RECOMMENDATION_DESC: "We're recommending §S$COSMIC_STORMS_TITLE$§! as some of the choices you've selected suit its content."
  HIDE_UNOWNED_CONTENT:0 "ซ่อนเนื้อหาที่ไม่ได้เป็นเจ้าของ"
