--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -20,6 +20,7 @@
  PLANETARY_MODIFIERS: "การปรับเปลี่ยนของดาวเคราะห์:"
  PLANETARY_FEATURES: "คุณสมบัติของดาวเคราะห์:"
  SPECIES_TRAITS: "เผ่าพันธุ์มีคุณลักษณะ:"
+ LEADERS_TRAITS: "คุณลักษณะผู้นำ:"
  TABBED_NEW_LINE: "\n$t$"
  NEW_LINE: "\n"
  DOUBLE_NEW_LINE: "\n\n"
@@ -1483,7 +1484,7 @@
  RESOLUTION_DETAILS:0 "§Gคลิกเพื่อแสดงรายละเอียดมติ§!"
  IN_RECESS_HELP:0 "\n§Hวุฒิสภาอยู่ในช่วงปิดสมัยประชุม§!\nลงการสนับสนุนของคุณกับมติที่ถูกเสนอในคิวเพื่อกำหนด  ว่าญัตติใดจะถูกนำเข้าที่ประชุมเมื่อเซสชันถัดไปเริ่มต้นขึ้น"
  ENVOYS_HEADER:0 "§Hทูต§!"
- ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับการแต่งตั้ง\n$h_line$§Eทูตสามารถจัดการกับการติดต่อครั้งแรกกับเอเลี่ยนที่ไม่รู้จัก ส่งไปจักรวรรดิอื่นเพื่อทำหน้าที่ทางการฑูตและจัดการเครือข่ายสายลับ$tt_gain$§Y-§! สร้างสิ่งก่อสร้างขนาดมหึมา §Hสมัชชาระหว่างดวงดาว§!\n§Y-§! การใช้ประโยชน์จาก §Hคุณสมบัติพลเมือง§!, §Hสิ่งปลูกสร้าง§!, §Hความสามารถของสหพันธ์§!, และ §Hคุณลักษณะผู้นำ§!§!"
+ ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับการแต่งตั้ง\n$h_line$§Eทูตสามารถจัดการกับการติดต่อครั้งแรกกับเอเลี่ยนที่ไม่รู้จัก ส่งไปจักรวรรดิอื่นเพื่อทำหน้าที่ทางการฑูตและจัดการเครือข่ายสายลับ$tt_gain$§Y-§! สร้างสิ่งก่อสร้างขนาดมหึมา £megastructure£ §Hสมัชชาระหว่างดวงดาว§!\n§Y-§! การใช้ประโยชน์จาก §Hคุณสมบัติพลเมือง§!, §Hสิ่งปลูกสร้าง§!, §Hความสามารถของสหพันธ์§!, และ §Hคุณลักษณะผู้นำ§!§!"
  ASSIGN_ENVOY:0 "แต่งตั้งทูต"
  ASSIGN_ENVOY_NOT_MEMBER_TOOLTIP:0 "§Hแต่งตั้งทูต§!\n§Rคุณจะต้องเป็นสมาชิกประชาคมกาแล็กติกจึงจะสามารถแต่งตั้งทูตได้§!"
  ASSIGN_ENVOY_TOOLTIP:1 "§HAssign Official§!\n§GClick to open the Assign Official view§!"
