--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -398,6 +398,7 @@
  MOD_PLANET_CRIME_MULT:0 "$MOD_PLANET_CRIME_ADD$"
  MOD_PLANET_CRIME_NO_HAPPINESS_ADD:0 "ความเบี่ยงเบน"
  MOD_PLANET_CRIME_NO_HAPPINESS_MULT:0 "$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$"
+ MOD_PLANET_CRIME_FLOOR_ADD: "ดาวเคราะห์อาชญากรรมต่ำ"
  MOD_PLANET_STABILITY_ADD:0 "เสถียรภาพ"
  mod_habitat_stability_add:0 "เสถียรภาพบนที่อยู่อาศัยในวงโคจร"
  MOD_PLANET_STABILITY_MULT:0 "$MOD_PLANET_STABILITY_ADD$"
