--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -697,9 +697,9 @@
  leader_trait_general_mind_wipe_02:0 "Shroud-Touched Commander"
  leader_trait_general_mind_wipe_02_desc:0 "$shroud_touched_intro$ this commander's mind now swirls with new ideas to enhance the performance of our armies."
  leader_trait_ruler_mind_wipe_01:1 "Shroud-Touched Architect"
- leader_trait_ruler_mind_wipe_01_desc:0 "$shroud_touched_intro$ this ruler's mind now swirls with new ideas to assist construction efforts."
+ leader_trait_ruler_mind_wipe_01_desc:0 "$shroud_touched_intro$ this leader's mind now swirls with new ideas to assist construction efforts."
  leader_trait_ruler_mind_wipe_02:1 "Shroud-Touched Logistician"
- leader_trait_ruler_mind_wipe_02_desc:0 "$shroud_touched_intro$ this ruler's mind now swirls with new ideas to boost fleet performance."
+ leader_trait_ruler_mind_wipe_02_desc:0 "$shroud_touched_intro$ this leader's mind now swirls with new ideas to boost fleet performance."
  gestalt_trait_commander_mind_wipe_01:0 "Shroud-Touched Naval Drone"
  gestalt_trait_commander_mind_wipe_01_desc:0 "$shroud_touched_intro$ this drone is now capable of enhancing ship performance."
  gestalt_trait_commander_mind_wipe_02:0 "Shroud-Touched Naval Drone"
