--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -846,7 +846,7 @@
  r_consumer_goods:1 "£consumer_goods£ §Y$consumer_goods$§!"
  r_unity:1 "£unity£ §Y$unity$§!"
  r_influence:1 "£influence£ §Y$influence$§!"
- r_research:1 "§Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
+ r_research:1 "£physics£ £society£ £engineering£ §Yแต้มการวิจัย§!"
  r_physics:0 "£physics£ §Yการวิจัยฟิสิกส์§!"
  r_society:0 "£society£ §Yการวิจัยสังคม§!"
  r_engineering:0 "£engineering£ §Yการวิจัยวิศวกรรม§!"
@@ -860,23 +860,23 @@
  r_dark_matter:1 "£sr_dark_matter£ §Y$sr_dark_matter$§!"
  r_zro:1 "£sr_zro£ §Y$sr_zro$§!"
  r_nanites:1 "£nanites£ §Y$nanites$§!"
- r_basic: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
- r_basic_plural: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
- r_advanced: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
- r_advanced_plural: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
- r_strategic:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
- r_strategic_plural:0 "§Yทรัพยากรเชิงยุทธศาสตร์§! £rare_crystals£ £exotic_gases£ £volatile_motes£"
+ r_basic: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
+ r_basic_plural: "£energy£ £minerals£ £food£ §Yทรัพยากรพื้นฐาน§!"
+ r_advanced: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
+ r_advanced_plural: "£alloys£ £consumer_goods£ §Yทรัพยากรขั้นสูง§!"
+ r_strategic:0 "£rare_crystals£ £exotic_gases£ £volatile_motes£ §Yทรัพยากรเชิงยุทธศาสตร์§!"
+ r_strategic_plural:0 "£rare_crystals£ £exotic_gases£ £volatile_motes£ §Yทรัพยากรเชิงยุทธศาสตร์§!"
  r_minor_artifacts: "£minor_artifacts£ §Yศิลปวัตถุชั้นรอง§!"
  r_astral_threads: "£astral_threads£ §Y$astral_threads$§!"
- w_basic_plural: "£energy£ £minerals£ £food£ ทรัพยากรพื้นฐาน"
- w_advanced_plural: "£alloys£ £consumer_goods£ ทรัพยากรขั้นสูง"
- w_strategic_plural:0 "£rare_crystals£ £exotic_gases£ £volatile_motes£ ทรัพยากรเชิงยุทธศาสตร์"
+ w_basic_plural: "£energy£ £minerals£ £food£ ทรัพยากรพื้นฐาน"
+ w_advanced_plural: "£alloys£ £consumer_goods£ ทรัพยากรขั้นสูง"
+ w_strategic_plural:0 "£rare_crystals£ £exotic_gases£ £volatile_motes£ ทรัพยากรเชิงยุทธศาสตร์"
  resource_subsidies_basic:1 "พื้นฐาน"
  resource_subsidies_advanced:1 "ขั้นสูง"
  resource_subsidies_research:1 "วิจัย"
  resource_subsidies_strategic:1 "ยุทธศาสตร์"
- type_crime:0 "£crime£ §Y$PLANET_CRIME_TITLE$§!"
- type_deviancy:0 "£crime£ §Yความเบี่ยงเบน§!"
+ type_crime:0 "£crime£ §Y$PLANET_CRIME_TITLE$§!"
+ type_deviancy:0 "£crime£ §Yความเบี่ยงเบน§!"
  pop_mechanical:0 "Mechanical"
  pop_organic:0 "สิ่งมีชีวิต"
  PRODUCES_RESOURCES_FOR_OVERLORD:0 "Produces for Overlord: "
