--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -43,6 +43,7 @@
  POPULATION_BUTTON:0 "§Hประชากร§!"
  PLANET_CRIME_NO_HAPPINESS_DESC:0 "§E§Yความเบี่ยงเบน§! เป็นการวัดระดับโดยรวมของพฤติกรรมผิดปกติและการไม่ปฏิบัติตามข้อกำหนดของประชากรบนดาวดวงนี้ การมี §Yความเบี่ยงเบน§! ที่สูงจะทำให้เหตุการณ์ด้านลบ เกิดขึ้นบนดาวและอาจลด £stability£ §Yเสถียรภาพ§! ซึ่งเกิดจากการมีประชากรดาวเคราะห์ที่มีจำนวนมาก และสามารถลดความเบี่ยงเบนโดยการจ้าง  £job_patrol_drone£ §Y$job_patrol_drone_plural$§!§!"
  CRIME_FROM_POPS:0 "จากประชากร: §R+$VALUE|0$§!"
+ CRIME_UNDER_FLOOR: "This Planet has a minimum Crime level of $VALUE|0Y$ due to:"
  POP_BASE_CRIME:0 "พื้นฐานอาชญากรรม: $VALUE|2Y$"
  POP_BASE_DEVIANCY: "ความเบี่ยงเบนพื้นฐาน: $VALUE|2Y$"
  POP_CRIME_SCALE:0 "คูณด้วย §Yx$SCALE|2$§! เนื่องจากความสุข $HAPPINESS|Y%$"
@@ -548,6 +549,12 @@
  district_resort: "เขตรีสอร์ต"
  district_resort_plural: "เขตรีสอร์ต"
  district_resort_desc: "Resorts, casinos, retreats and entertainment; anything one would need for the vacation of their dreams."
+ district_prison: "เขตเรือนจำ"
+ district_prison_plural: "เขตเรือนจำ"
+ district_prison_desc: "Cells, guard towers, high walls, and security checkpoints. All are designed for the containment and rehabilitation of society's detainees."
+ district_prison_industrial: "เขตอุตสาหกรรมเรือนจำ"
+ district_prison_industrial_plural: "เขตอุตสาหกรรมเรือนจำ"
+ district_prison_industrial_desc: "Workshops, factories, surveillance systems, and fortified barriers for detainment and productive labor within the bounds of security and order."
  building_virtual_entertainment_studios:0 "สตูดิโอความบันเทิงเสมือนจริง"
  building_virtual_entertainment_studios_desc:0 "Using nano-transaction systems and neuro-chemical retention algorithms, these development houses bring the latest in virtual entertainment software into the homes and lives of billions of sapient consumers."
  building_private_shipyards:0 "อุตสาหกรรมทหารเอกชน"
@@ -556,6 +563,12 @@
  building_military_contractors_desc:0 "This office allows locals to sign up for the exciting life of a corporate soldier of fortune. Generous compensation, limited health insurance and stories of adventure ensure a steady stream of recruits."
  building_commercial_forum:0 "สภาการค้า"
  building_commercial_forum_desc:0 "Movers and shakers, local economic leaders, and other important figures can meet with corporate representatives here in a relaxed, soothing environment ideal for the creation of new business deals."
+ district_slave: "เขตที่อยู่ทาส"
+ district_slave_desc: "Endless slums of towering, densely packed housing are designed to hold the maximum number of individuals with minimal upkeep."
+ district_slave_plural: "เขตที่อยู่ทาส"
+ district_battle_thrall: "เขตทาสสงคราม"
+ district_battle_thrall_desc: "Utilitarian barracks and deadly training grounds designed to forge the most ferocious battle thralls."
+ district_battle_thrall_plural: "เขตทาสสงคราม"
  building_amusement_megaplex:0 "สวนสนุกครบวงจร"
  building_amusement_megaplex_desc:0 "A magical place where dreams can become reality, this megaplex features wholesome, corporate-sanctioned fun for the entire family unit."
  building_private_mining_consortium:0 "สมาคมเหมืองแร่เอกชน"
@@ -968,6 +981,51 @@
  mod_job_resort_worker_add: "งาน $job_resort_worker$"
  mod_job_resort_worker_per_pop: "§G+1§! งาน $job_resort_worker$ ต่อ $VALUE$ ประชากร"
  mod_job_resort_worker_per_pop_short: "\n§G+1§! £mod_job_resort_worker_add£ ต่อ $VAUE$ £pop£"
+ job_warden: "Planetary Warden"
+ job_warden_plural: "Planetary Wardens"
+ job_warden_desc: "Overseeing an entire penal planet as its warden demands individuals who are highly skilled and wholly committed to the task at hand."
+ job_warden_effect_desc:0 "£job_warden£ $job_warden_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £stability£ §Y$PLANET_STABILITY_TITLE$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
+ mod_job_warden_add: "$job_warden$ Jobs"
+ mod_job_warden_per_pop: "§G+1§! $job_warden$ Job per $VALUE$ Pops"
+ mod_job_warden_per_pop_short: "\n§G+1§! £mod_job_warden_add£ per $VALUE$ £pop£"
+ job_foundry_prison_worker: "Penal Metallurgist"
+ job_foundry_prison_worker_plural: "Penal Metallurgists"
+ job_foundry_prison_worker_desc: "Trained prisoners are used to turn raw minerals into durable alloys used in various advanced construction."
+ job_foundry_prison_worker_effect_desc: "£job_foundry_prison_worker£ $job_foundry_prison_worker_plural$ turn £minerals£ §Y$minerals$§! into £alloys£ §Y$alloys$§!"
+ mod_job_foundry_prison_worker_add: "$job_foundry_prison_worker$ Jobs"
+ mod_job_foundry_prison_worker_per_pop: "§G+1§! $job_foundry_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_foundry_prison_worker_per_pop_short: "\n§G+1§! £mod_job_foundry_prison_worker_add£ per $VALUE$ £pop£"
+ job_artisan_prison_worker: "Penal Artisan"
+ job_artisan_prison_worker_plural: "Penal Artisans"
+ job_artisan_prison_worker_icon: "£job_artisan_prison_worker£"
+ job_artisan_prison_worker_desc: "These trained prisoners manufacture domestic and luxury goods of various types."
+ job_artisan_prison_worker_effect_desc: "£job_artisan_prison_worker£ $job_artisan_prison_worker_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§!"
+ mod_job_artisan_prison_worker_add: "$job_artisan_prison_worker$ Jobs"
+ mod_job_artisan_prison_worker_per_pop: "§G+1§! $job_artisan_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_artisan_prison_worker_per_pop_short: "\n§G+1§! £mod_job_artisan_prison_worker_add£ per $VALUE$ £pop£"
+ job_catalytic_technician_prison_worker: "Penal Catalytic Technician"
+ job_catalytic_technician_prison_worker_plural: "PenalCatalytic Technicians"
+ job_catalytic_technician_prison_worker_desc: "These trained prisoners turn raw organic matter into durable alloys for advanced construction."
+ job_catalytic_technician_prison_worker_effect_desc: "£job_catalytic_technician_prison_worker£ $job_catalytic_technician_prison_worker_plural$ turn £food£ §Y$food$§! into £alloys£ §Y$alloys$§!"
+ mod_job_catalytic_technician_prison_worker_add: "$job_catalytic_technician_prison_worker$ Jobs"
+ mod_job_catalytic_technician_prison_worker_per_pop: "§G+1§! $job_catalytic_technician_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_catalytic_technician_prison_worker_per_pop_short: "\n§G+1§! £mod_job_catalytic_technician_prison_worker_add£ per $VALUE$ £pop£"
+ job_artificer_prison_worker: "Penal Artificer"
+ job_artificer_prison_worker_plural: "Penal Artificers"
+ job_artificer_prison_worker_icon: "£job_artificer_prison_worker£"
+ job_artificer_prison_worker_desc: "Skilled prisoners that manufacture domestic and luxury goods of stunning quality."
+ job_artificer_prison_worker_effect_desc: "£job_artificer£ $job_artificer_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§!"
+ mod_job_artificer_prison_worker_add: "$job_artificer_prison_worker$ Jobs"
+ mod_job_artificer_prison_worker_per_pop: "§G+1§! $job_artificer_prison_worker$ Job per $VALUE$ Pops"
+ mod_job_artificer_prison_worker_per_pop_short: "\n§G+1§! £mod_job_artificer_prison_worker_add£ per $VALUE$ £pop£"
+ job_battle_thrall: "ทาสสงคราม"
+ job_battle_thrall_plural: "ทาสสงคราม"
+ job_battle_thrall_icon: "£job_battle_thrall£"
+ job_battle_thrall_desc: "Elite slave warriors, trained from birth, who fight with unparalleled zeal and ferocity. Their loyalty and dedication make them formidable on the front lines."
+ job_battle_thrall_effect_desc: "£job_battle_thrall£ $job_battle_thrall_plural$ increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawn £defense_army£ §YDefense Armies§! and improve empire wide §Y$MOD_ARMY_ATTACK_DAMAGE_MULT$§!."
+ mod_job_battle_thrall_add: "งาน $job_battle_thrall$"
+ mod_job_battle_thrall_per_pop: "§G+1§! $job_battle_thrall$ Job per $VALUE$ Pops"
+ mod_job_battle_thrall_per_pop_short: "\n§G+1§! £mod_job_battle_thrall_add£ ต่อ $VALUE$ £pop£"
  job_trader: "นักเทรด"
  job_trader_with_icon: "£job_trader£ $job_trader$"
  job_trader_plural: "นักเทรด"
@@ -1083,7 +1141,7 @@
  job_researcher_icon:0 "£job_researcher£"
  job_researcher_plural_with_icon: "£job_researcher£ $job_researcher_plural$"
  job_researcher_desc:0 "The eternal mystery of the world is its comprehensibility."
- job_researcher_effect_desc:1 "£job_researcher£ $job_researcher_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
+ job_researcher_effect_desc:1 "£job_researcher£ $job_researcher_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น $r_research$"
  mod_job_researcher_add:0 "งาน $job_researcher$"
  mod_job_researcher_per_pop:0 "§G+1§! อาชีพ $job_researcher$ ต่อ $VALUE$ ประชากร"
  mod_job_researcher_per_pop_short:0 "\n§G+1§! £mod_job_researcher_add£ ต่อ $VALUE$ £pop£"
@@ -1618,7 +1676,9 @@
  mod_planet_jobs_engineering_research_produces_add:0 "$mod_planet_jobs_engineering_research_produces_mult$"
  mod_planet_miners_minerals_produces_mult:1 "£minerals£ $minerals$จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_minerals_produces_add:0 "$mod_planet_miners_minerals_produces_mult$"
+ mod_planet_miners_physics_research_produces_add: "£physics£ $physics_research$ จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_miner£ [GetMinerPlural]"
+ mod_planet_miners_consumer_goods_upkeep_add: "£consumer_goods£ $consumer_goods$ ที่เป็นค่าบำรุงรักษาของ £job_miner£ [GetMinerPlural]"
  mod_planet_sr_miners_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ ผู้เก็บรวบรวมทรัพยากรเชิงยุทธศาสตร์"
  mod_planet_sr_miners_rare_crystals_produces_mult:0 "£rare_crystals£ $rare_crystals$จาก ผู้เก็บรวบรวมทรัพยากรเชิงยุทธศาสตร์"
  mod_planet_sr_miners_volatile_motes_produces_mult:0 "£volatile_motes£ $volatile_motes$จาก ผู้เก็บรวบรวมทรัพยากรเชิงยุทธศาสตร์"
@@ -1642,9 +1702,11 @@
  mod_planet_farmers_exotic_gases_produces_add: "£exotic_gases£ $exotic_gases$ จาก £job_farmer£ [GetFarmerPlural]"
  mod_planet_farmers_energy_produces_add:0 "£energy£ $energy$ จาก £job_farmer£ [GetFarmerPlural]"
  mod_planet_farmers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_farmer£ [GetFarmerPlural]"
+ mod_planet_farmers_consumer_goods_upkeep_add: "£consumer_goods£ $consumer_goods$ ที่เป็นค่าบำรุงรักษาของ £job_farmer£ [GetFarmerPlural]"
  mod_planet_technician_energy_produces_mult:1 "£energy£ $energy$จาก £job_technician£ [GetTechnicianPlural]"
  mod_planet_technician_energy_produces_add:0 "$mod_planet_technician_energy_produces_mult$"
  mod_planet_technician_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_technician£ [GetTechnicianPlural]"
+ mod_planet_technician_consumer_goods_upkeep_add: "£consumer_goods£ $consumer_goods$ ที่เป็นค่าบำรุงรักษาของ £job_technician£ [GetTechnicianPlural]"
  mod_planet_technician_physics_research_produces_mult: "£physics£ $physics_research$ จาก £job_technician£ [GetTechnicianPlural]"
  mod_planet_technician_physics_research_produces_add: "$mod_planet_technician_physics_research_produces_mult$"
  mod_planet_technician_engineering_research_produces_mult: "£engineering£ $engineering_research$ จาก £job_technician£ [GetTechnicianPlural]"
@@ -1688,12 +1750,16 @@
  mod_planet_managers_unity_produces_add:0 "£unity£ $unity$ จาก £job_manager£ $job_manager_plural$"
  mod_planet_merchants_unity_produces_add:0 "£unity£ $unity$ จาก £job_merchant£ $job_merchant_plural$"
  mod_planet_enforcers_unity_produces_add:0 "£unity£ $unity$ จาก £job_enforcer£ $job_enforcer_plural$"
+ mod_planet_enforcers_produces_mult: "ผลผลิตของ £job_enforcer£ $job_enforcer_plural$"
+ mod_planet_enforcers_upkeep_mult: "ค่าบำรุงรักษา £job_enforcer£ $job_enforcer_plural$"
  mod_planet_telepaths_unity_produces_add:0 "£unity£ $unity$ จาก £job_telepath£ $job_telepath_plural$"
+ mod_planet_telepaths_produces_mult: "ผลผลิตของ £job_telepath£ $job_telepath_plural$"
  mod_planet_soldiers_unity_produces_add:1 "£unity£ $unity$ จาก £job_soldier£ [GetSoldierPlural]"
  mod_planet_soldiers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ จาก £job_soldier£ [GetSoldierPlural]"
  mod_planet_soldiers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_soldier£ [GetSoldierPlural]"
  mod_planet_entertainers_produces_mult:0 "ทรัพยากรจาก [GetEntertainerPluralWithIcon]"
  mod_planet_entertainers_unity_produces_add:0 "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
+ mod_planet_entertainers_upkeep_mult: "ค่าบำรุงรักษา [GetEntertainerPluralWithIcon]"
  mod_planet_doctors_unity_produces_add: "£unity£ $unity$ จาก £job_healthcare£ $job_healthcare_plural$"
  mod_planet_entertainers_engineering_research_produces_add: "£engineering£ $engineering_research$ จาก [GetEntertainerPluralWithIcon]"
  mod_station_gatherers_produces_mult:0 "ผลผลิตของสถานีเหมืองแร่"
@@ -1837,6 +1903,8 @@
  building_sensorium_3_desc:0 "$building_sensorium_1_desc$"
  building_research_lab_1:0 "ห้องวิจัย"
  building_research_lab_1_desc:0 "ห้องปฏิบัติการวิจัยมีสิ่งอำนวยความสะดวกพื้นฐานสำหรับการวิจัยทั่วไป"
+ concept_research_lab: "$building_research_lab_1$"
+ concept_research_lab_desc: "งาน $job_researcher$: §G+2§!\n\n$job_researcher_effect_desc$\n$h_line$§L$building_research_lab_1_desc$§!"
  building_research_lab_2:0 "ศูนย์วิจัยซับซ้อน"
  building_research_lab_2_desc:0 "Upgraded research facilities with a very large staff capacity."
  building_research_lab_3:0 "ศูนย์วิจัยซับซ้อนขั้นสูง"
@@ -2267,7 +2335,7 @@
  d_neutronium_deposit:0 "Neutronium Ore discovered\n  £minerals£ +5\n"
  d_teldar_deposit:0 "Teldar Crystals discovered\n  £engineering£ +1  £society£ +1"
  d_engos_deposit:0 "Engos Vapor discovered\n  £society£ +2\n"
- d_living_metal_deposit:1 "Living Metal discovered\n"
+ d_living_metal_deposit: "£sr_living_metal£ §Y+1§!"
  d_lythuric_gas_deposit:0 "Lythuric Gas discovered\n  £physics£ +3\n"
  d_zro_deposit:0 "ค้นพบแร่ซีโร\n  £society£ +2\n  £physics£ +5\n"
  d_satramene_deposit:0 "Satramene Gas discovered\n  £energy£ +4\n"
@@ -2303,7 +2371,7 @@
  penal_colony:0 "ทัณฑนิคม (อาณานิคมคุก)"
  penal_colony_desc:0 "This world is filled with strictly controlled criminals, paying off their debt to society in labor camps. For many, the debt will never be repaid."
  slave_colony:0 "ดาวทาส"
- slave_colony_desc:0 "This world is purpose-built to maximize the growth rate of its enslaved population."
+ slave_colony_desc:1 "This world is purpose-built to extract the maximum potential from an enslaved population. The main way off the planet for slaves is through specialized military centers that forge them into loyal battle thrall armies, conditioned for relentless warfare."
  resort_colony_other_planets:0 "$resort_colony$"
  penal_colony_other_planets:0 "$penal_colony$"
  building_slave_huts:0 "เพิงพักของทาส"
@@ -2336,12 +2404,13 @@
  gestation_colony_desc:0 "$col_gestation_desc$"
  gestation_colony_effects:0 "£building£ §YCapital Buildings§! have some §Y£job_replicator£ $job_replicator$§! Jobs replaced with §Y£job_gestation_drone£ $job_gestation_drone$§! Jobs.\n£district£ §YNexus Districts§! have some §Y£job_maintenance_drone£ $job_maintenance_drone$§! Jobs replaced with §Y£job_gestation_drone£ $job_gestation_drone$§! Jobs."
  decision_slave_colony:0 "สร้างดาวทาส"
- decision_slave_colony_desc:0 "This entire world is purpose-built to maximize the growth rate of its enslaved population through a variety of reproductive incentives."
- decision_slave_colony_effects:0 "ปิดการใช้งานการก่อสร้าง £housing£ §Yเขตเมือง§! และ £building£ §Yสิ่งปลูกสร้าง§! ส่วนใหญ่บนดาวเคราะห์\nAllows construction of £building£ §YSlave Huts§!\n£pop£ §YFree Pops§! can no longer grow on the planet"
- decision_slave_colony_must_have_slave:0 "£trigger_no£ Must have at least one £pop£ Pop from a §YFully Enslaved§! Species on the planet."
- decision_slave_colony_effects_short:0 "Greatly increases §YPop Growth Speed§!\n\nPlanet becomes largely unsuitable for £pop£ §YFree Pops§!"
+ decision_slave_colony_desc:0 "This world is purpose-built to extract the maximum potential from an enslaved population. The main way off the planet for slaves is through specialized military centers that forge them into loyal battle thrall armies, conditioned for relentless warfare."
+ decision_slave_colony_effects:1 "- แทนที่ £district£ §Yเขตเมือง§! ด้วย §Y$district_slave_plural$§!\n- แทนที่ £district£ §Y$district_industrial_plural$§! ด้วย §Y$district_battle_thrall$§!\n$job_battle_thrall_effect_desc$\n- ปิดการทำงานของ £building£ §Yสิ่งปลูกสร้าง§! ส่วนใหญ่ในดาวเคราะห์\n- £pop£ §Yประชากรว่างงาน§! จะไม่เพิ่มบนดาวเคราะห์ได้อีกต่อไป\n\n"
+ decision_slave_colony_must_have_slave:1 "£trigger_no£ Must have at least one £pop£ Pop from a §YFully Enslaved§! Species on the planet."
+ decision_slave_colony_effects_short:0 "Disables construction of most £building£ §YBuildings§! and replaces £district£ §YUrban Districts§! with §Y$district_slave_plural$§! and §Y$district_battle_thrall$§!\n\nIncreases §YPop Growth Speed§!\nUnsuitable for £pop£ §YFree Pops§! "
  decision_abolish_slave_colony:0 "ยกเลิกดาวทาส"
- decision_abolish_slave_colony_desc:0 "This world will no longer be considered a Thrall-World, and growth incentive programs for its shackled population are ended."
+ decision_abolish_slave_colony_desc:0 "This world will no longer be considered a Thrall-World, dismantling any slave-focused infrastructure."
+ slave_colony_empire_effects: "Replaces all §Y£job_soldier£ $job_soldier_plural$§! with §Y£job_battle_thrall£ $job_battle_thrall_plural$§!."
  decision_penal_colony:0 "สร้างทัณฑนิคม (อาณานิคมคุก)"
  decision_penal_colony_desc:1 "This entire world is set aside as a massive penal colony. The vast prison communities are largely self-managed by the prisoners, and punishment often means exile into the unforgiving wilderness."
  decision_penal_colony_effects_short:0 "เพิ่ม £crime£ §Yอาชญากรรม§! และ §Yดึงการอพยพย้ายเข้า§! บนดาวดวงนี้\n\nลด £crime£ §Yอาชญากรรม§! บนดาวเคราะห์ดวงอื่นๆ ที่เป็นเจ้าของ"
@@ -2844,7 +2913,7 @@
  col_resort:0 "ดาวรีสอร์ต"
  col_resort_desc:2 "A tranquil, weather-controlled resort world with beautiful nature that has not yet been scarred by large-scale development."
  col_slave:0 "ดาวทาส"
- col_slave_desc:0 "This world is purpose-built to maximize the growth rate of its enslaved population."
+ col_slave_desc:1 "This world is purpose-built to extract the maximum potential from its enslaved population."
  col_penal:0 "ทัณฑนิคม (อาณานิคมคุก)"
  col_penal_desc:1 "A bleak penal colony, filled with criminals paying off their debt to society in labor camps."
  col_primitive:0 "ดาวดึกดำบรรพ์"
