--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -402,7 +402,7 @@
  DEBUG_THEIR_CODEBREAKING:0 "การถอดรหัสของพวกเขา: $VAL|-0$"
  OPERATION_COST_TOOLTIP_STATIC:0 "§Hค่าใช้จ่ายของปฏิบัติการ§!\nจ่ายครั้งเดียวเพื่อดำเนินการนี้"
  OPERATION_AUTO_LAUNCH_STATIC:1 "§HCommence When Ready§!\nOnce your operatives have completed their preparations, they will automatically commence the operation without waiting for confirmation."
- CANT_REMOVE_LEADER_ACTIVE_OPERATION:0 "§Rไม่สามารถย้ายทูตในขณะที่ปฏิบัติการอยู่ได้§!"
+ CANT_REMOVE_LEADER_ACTIVE_OPERATION: "§Rไม่สามารถแต่งตั้งหรือย้ายทูตในขณะที่ปฏิบัติงานอยู่ได้§!"
  operation.8000.name:0 "Following Up Leads"
  operation.8000.desc:0 "Our operatives are drawing up a shortlist of potential sleeper cells within the §H[root.target.GetName]§!. They hope to find a set of suitable positions where agents may appear innocuous and yet remain poised to strike for a prolonged period of time."
  operation.8001.name:0 "Potential Cells Identified"
