--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -301,6 +301,7 @@
  wormhole_key_relic_effect:0 "§GAllows every ship to make jumps, bypassing hyperlanes§!\n$MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT$: §G-50%§!\n$MOD_SHIP_DISENGAGE_CHANCE_MULT$: §G+75%§!"
  mod_planet_miners_engineering_research_produces_add:0 "£engineering_research£ $engineering_research$ จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_volatile_motes_produces_add:0 "£volatile_motes£ $volatile_motes$ จาก £job_miner£ [GetMinerPlural]"
+ mod_planet_miners_exotic_gases_produces_add: "£exotic_gases£ $exotic_gases$ จาก £job_miner£ [GetMinerPlural]"
  mod_job_scrap_miner_per_pop:0 "§G+1§! $job_scrap_miner$ Job per $VALUE$ Pops"
  mod_job_scrap_miner_per_pop_short:0 "\n§G+1§! £job_scrap_miner£ per $VALUE$ £pop£"
  mod_job_scrap_miner_drone_per_pop:0 "§G+1§! $job_scrap_miner_drone$ Job per $VALUE$ Pops"
@@ -1082,7 +1083,7 @@
  council_agenda_agenda_superior_colonies_effect:1 "อาณานิคมที่สร้างใหม่จะได้รับ §Y$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$:§! §G+50%§! เป็นเวลา §Y10§! ปี"
  agenda_superior_colonies_finish:0 "$council_agenda_agenda_superior_colonies_name$ $agenda_ref$"
  agenda_superior_colonies_finish_desc:0 "$council_agenda_agenda_superior_colonies_desc$"
- agenda_superior_colonies_planet_boost:0 "การสนับสนุนอาณานิคมที่เหนือกว่า"
+ agenda_superior_colonies_planet_boost:0 "Superior Colonies Support"
  agenda_superior_colonies_planet_boost_desc:1 "This colony has substantial development support due to a Council Agenda."
  council_agenda_agenda_inner_stability_name:0 "ความมั่นคงภายใน"
  council_agenda_agenda_inner_stability_desc:1 "วิสัยทัศน์ร่วมกันทำให้เรามีความปรองดองแม้มีค่านิยมที่แตกต่างกัน"
