--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -313,6 +313,8 @@
  IS_NOT_DAMAGED:0 "Planet is NOT damaged"
  HAS_HIT_POINTS:1 "จำนวนของ HP $COMPARATOR$ $NUM|Y$"
  HAS_NOT_HIT_POINTS:1 "จำนวนของ HP ไม่ $COMPARATOR$ $NUM|Y$"
+ HAS_SHIELD_HIT_POINTS: "HP โล่พลังงาน $COMPARATOR$ $NUM|Y$"
+ HAS_NOT_SHIELD_HIT_POINTS: "HP โล่พลังงาน ไม่$COMPARATOR$ $NUM|Y$"
  IS_PLANET_SURVEYED:1 "Planet has been surveyed by $COUNTRY$"
  IS_PLANET_NOT_SURVEYED:1 "Planet has NOT been surveyed by $COUNTRY$"
  CAN_COLONIZE_TRIGGER:0 "Can be colonized by $COUNTRY$"
@@ -1062,6 +1064,8 @@
  HAS_CLOAKING_STRENGTH_VALUE_TRIGGER:0 "Cloaking Strength value is $COMPARE$ $VALUE|Y$"
  HAS_NOT_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is NOT $COMPARE$ $VALUE|Y$"
  HAS_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is $COMPARE$ $VALUE|Y$"
+ HAS_NOT_NUM_ASTEROID_BELTS: "Number of asteroid belt $VAL0|2Y$ is NOT $COMPARE$ $VAL1|2Y$"
+ HAS_NUM_ASTEROID_BELTS: "Number of asteroid belt $VAL0|2Y$ is $COMPARE$ $VAL1|2Y$"
  SET_ASTEROID_BELT_EFFECT:0 "แถบดาวเคราะห์น้อยในระบบดาว $SYSTEM$ ที่ระยะห่าง $DISTANCE|0$"
  REMOVED_ASTEROID_BELT_EFFECT:0 "ลบแถบดาวเคราะห์น้อยในระบบดาว $SYSTEM$"
  REMOVE_PLANET:0 "Removed planet $PLANET$"
@@ -1159,6 +1163,7 @@
  REDUCE_HITPOINTS:1 "ลด HP ของ $SHIP|Y$"
  RESTORE_HITPOINTS:1 "ฟื้นฟู HP ของ $SHIP|Y$ จนเต็ม"
  DO_NOT_RESTORE_HITPOINTS:1 "ไม่ฟื้นฟู HP ของ $SHIP|Y$ จนเต็ม"
+ REDUCE_SHIELD: "ลด HP โล่พลังงานของ $SHIP|Y$"
  SET_SURVEYED:0 "Survey data collected.\n"
  SET_UNSURVEYED:0 "Survey data lost.\n"
  SET_VISITED_EFFECT:0 "Discovers the $SYSTEM|Y$ system.\n"
@@ -2021,3 +2026,5 @@
  FOG_MACHINE_AUTO_TRACKING_OFF: "Disallow the fog machine of country '$COUNTRY|Y$' to automatically track ownership of galactic objects"
  TRIGGER_IS_ON_SLAVE_MARKET: "Is being sold on the slave market"
  TRIGGER_IS_NOT_ON_SLAVE_MARKET: "Is NOT being sold on the slave market"
+ IS_INFERTILE_TRIGGER: "Is Infertile"
+ IS_NOT_INFERTILE_TRIGGER: "Is NOT Infertile"
