--- a/mod/thmod/localisation/english/events_3_l_english.yml
+++ b/mod/thmod/localisation/english/events_3_l_english.yml
@@ -100,8 +100,8 @@
  anomaly.4038.a:0 "We have mastered the secrets of suns."
  anomaly.4038.b:0 "The mysteries of the universe are slowly revealed."
  anomaly.4040.name:0 "Sins of a Sun"
- anomaly.4040.desc:0 "The ionizing radiation on [From.GetName] are off the charts. The [From.GetPlanetMoon] seems to either have been bombarded with nuclear warheads quite recently or been exposed to a concentrated beam of cosmic rays, perhaps from a nearby supernova. How the latter could ever be achieved is beyond Science Officer [Root.GetLeaderName]."
- anomaly.4040.a.tooltip:1 "Adds the §RIrradiated Wasteland§! modifier to [From.GetName]:\n£blocker£ Radioactive Wasteland §R+6§!\n£physics£ §G+3§!"
+ anomaly.4040.desc:0 "The ionizing radiation on [From.GetName] is off the charts. The [From.GetPlanetMoon] seems to either have been bombarded with nuclear warheads quite recently or been exposed to a concentrated beam of cosmic rays, perhaps from a nearby supernova. How the latter could ever be achieved is beyond Science Officer [Root.GetLeaderName]."
+ anomaly.4040.a.tooltip:1 "Adds the §RIrradiated Wasteland§! modifier to [From.GetName]:\n£blocker£ Radioactive Wasteland §R+6§!\n$mod_planet_jobs_physics_research_produces_mult$: §G+10%§!"
  anomaly.4045.name:0 "Echoes from the Deep"
  anomaly.4045.desc:0 "After rigorous research, the crew of [Root.GetName] has only been able to detect a faint "echo" emanating deep beneath the surface of [From.GetName].\n\nThe echo resembles a life signature, however it is so distant it is hard to tell if it is real or just the instruments giving off random variations. Science Officer [Root.GetLeaderName]'s crew is complaining about bad rest and long hours and cannot take much more."
  anomaly.4045.a:0 "Calibrate the scanners and look closer to the core!"
