--- a/mod/thmod/localisation/english/machine_age_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_l_english.yml
@@ -807,7 +807,7 @@
  NEEDS_GENE_TAILORING_OR_INTERGRATED_ANATOMY: "$TRIGGER_FAIL$To modify this species we require either:\n- £society£ §Y$tech_gene_tailoring$§! Technology\n- £unity£ §Y$tr_cybernetics_integrated_anatomy$§! Tradition"
  NEEDS_ROBOT_MODDING: "$TRIGGER_FAIL$To modify this species we require:\n- £engineering£ §Y$tech_robomodding$§! Technology"
  NEEDS_ROBOT_MODDING_M: "$TRIGGER_FAIL$To modify this species we require:\n- £engineering£ §Y$tech_robomodding_m$§! Technology"
- requires_tech_gene_tailoring: "$TRIGGER_FAIL$Requires the £society£ §Y$tech_gene_tailoring$§! Technology."
+ requires_tech_gene_tailoring: "$TRIGGER_FAIL$ต้องการเทคโนโลยี £society£ §Y$tech_gene_tailoring$§!"
  ASCENSION_SITUATION_ONGOING: "$TRIGGER_FAIL$We cannot modify this species while we have an ongoing §YAscension Situation§!."
  cybercreed_tithe_mining: "The Tithe of Mining"
  cybercreed_tithe_mining_desc: "$machine_age.1070.intro$ to mining."
@@ -2569,10 +2569,10 @@
  council_agenda_agenda_nanotech_unstoppable_swarm_desc: "We shall ensure that our swarm will blot out the stars themselves."
  agenda_nanotech_unstoppable_swarm_finish: "$council_agenda_agenda_nanotech_unstoppable_swarm_name$ $agenda_ref$"
  agenda_nanotech_unstoppable_swarm_finish_desc: "$council_agenda_agenda_nanotech_unstoppable_swarm_desc$"
- mod_ship_nanite_swarmer_cost_mult: "$nanite_swarmer$ Build Cost"
- mod_shipsize_nanite_swarmer_build_speed_mult: "$nanite_swarmer$ Build Speed"
- mod_shipsize_nanite_swarmer_evasion_mult: "$nanite_swarmer$ Evasion"
- mod_shipsize_nanite_swarmer_tracking_mult: "$nanite_swarmer$ Tracking"
+ mod_ship_nanite_swarmer_cost_mult: "$nanite_swarmer$ ค่าใช้จ่ายในการสร้าง"
+ mod_shipsize_nanite_swarmer_build_speed_mult: "$nanite_swarmer$ ความเร็วในการสร้าง"
+ mod_shipsize_nanite_swarmer_evasion_mult: "$nanite_swarmer$ การหลบหลีก"
+ mod_shipsize_nanite_swarmer_tracking_mult: "$nanite_swarmer$ การติดตามเป้าหมาย"
  tradition_modularity: "ความเป็นโมดูล"
  tradition_modularity_desc: "แทนที่ด้วยที่สิ่งที่เล็กกว่า เสริม อัปเกรด ทำให้มันสมบูรณ์แบบ"
  tr_modularity_adopt: "วัฒนธรรมความเป็นโมดูล"
