--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -587,7 +587,7 @@
  tr_cybernetics_integrated_anatomy_delayed:0 "Only by alloying [Owner.Species.GetFleshTypeCyberCreed], steel, and nano-carbon composite can we truly reach perfection."
  tr_cybernetics_integrated_anatomy_desc:0 "สามารถเลือกคุณลักษณะทาง §Yไซบอร์ก§! ในการปรับเปลี่ยนเผ่าพันธุ์ได้ โดยการเลือกคุณลักษณะเป็น §Yไซเบอร์เนติก§!\n"
  tr_cybernetics_integrated_anatomy_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_integrated_anatomy_desc$$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!"
- requires_tr_cybernetics_integrated_anatomy: "$TRIGGER_FAIL$Requires the §Y$tr_cybernetics_integrated_anatomy$§! Tradition."
+ requires_tr_cybernetics_integrated_anatomy: "$TRIGGER_FAIL$ต้องการวัฒนธรรม §Y$tr_cybernetics_integrated_anatomy$§!"
  tr_cybernetics_augmentation_overload: "Augmentation Overload"
  tr_cybernetics_augmentation_overload_delayed: "The only way to keep up with people's demand for implants are more $job_augmentor_plural$."
  tr_cybernetics_augmentation_overload_desc: "$job_augmentor_plural_with_icon$ ต่อ $building_augmentation_center$: §G+2§!"
@@ -677,7 +677,7 @@
  tr_synthetics_solid_state_actuators_situation_effects: "$tr_synthetics_situation$$MOD_LEADER_LIFESPAN_ADD$: §G+20%§!"
  tr_synthetics_solid_state_actuators_virtual: "$tr_synthetics_solid_state_actuators$"
  tr_synthetics_solid_state_actuators_virtual_delayed: "$tr_synthetics_solid_state_actuators_virtual_desc$"
- requires_tradition_tr_synthetics_adopt:0 "$TRIGGER_FAIL$§RRequires the §Y$tr_synthetics_adopt$§! to be adopted§!"
+ requires_tradition_tr_synthetics_adopt:0 "$TRIGGER_FAIL$§Rเลือกใช้วัฒนธรรม §Y$tr_synthetics_adopt$§!§!"
  REQUIRES_SYNTHETIC_EMPIRE_UTOPIA: "$TRIGGER_FAIL$Has completed §Y$SYNTHETIC_EVOLUTION_PROJECT$§! special project"
  tradition_aptitude:0 "ความสามารถ"
  tradition_aptitude_desc:0 "จักรวรรดิของเราสามารถรุ่งเรืองได้อย่างแท้จริงภายใต้การนำของผู้นำที่แข็งแกร่ง"
