--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1228,22 +1228,22 @@
  RETURN_ORDER_DESC:1 "สั่งซื้อกองยานที่เลือกกลับไปยังฐานอวกาศพันธมิตรที่ใกล้ที่สุด กด control เพื่อกลับไปยังฐานอวกาศที่เราเป็นเจ้าของ"
  RETURN_TO_HOMEBASE_ORDER_DESC:0 "สั่งกองยานที่เลือกกลับไปยังฐานประจำการ หากยังไม่ได้กำหนดฐานประจำการ กองยานจะกลับไปยังฐานอวกาศของพันธมิตรที่ใกล้ที่สุด"
  SURVEY_ORDER:0 "สำรวจโดยละเอียด"
- SURVEY_ORDER_DESC:1 "Order the Science Ship to Survey stars, planets and asteroids. Surveying will reveal detailed information and might even unveil an Anomaly."
- SURVEY_ORDER_CLICK_DESC:0 "§GClick this button, then click an object to survey its entire star system\nControl-click this button, then click an object to survey only that object§!"
+ SURVEY_ORDER_DESC:1 "สั่งยานวิจัยวิทยาศาสตร์เพื่อสำรวจดาว ดาวเคราะห์และดาวเคราะห์น้อย การสำรวจจะเปิดเผยข้อมูลโดยละเอียดและอาจเผยความผิดปกติด้วย"
+ SURVEY_ORDER_CLICK_DESC:0 "§Gคลิกปุ่มนี้ จากนั้นคลิกที่วัตถุเป้าหมายเพื่อสำรวจระบบดาวทั้งหมด\nกด Control ค้างไว้แล้วคลิกปุ่มนี้ จากนั้นคลิกวัตถุเป้าหมายเพื่อสำรวจเฉพาะวัตถุนั้น§!"
  SURVEY_ORDER_PLANET_DESC:0 "สำรวจโดยละเอียด $PLANET|Y$"
  SURVEY_ORDER_PLANET_ALL_DESC:0 "สำรวจระบบโดยละเอียดเริ่มต้นที่ $PLANET|Y$"
  SURVEY_ORDER_SYSTEM_DESC:0 "สำรวจโดยละเอียดวัตถุท้องฟ้าทั้งหมดใน $SYSTEM|Y$"
  RESEARCH_ORDER:1 "วิจัยความผิดปกติ"
  RESEARCH_ORDER_DESC:0 "สั่งยานวิจัยวิทยาศาสตร์เพื่อวิจัยสิ่งผิดปกติ"
  RESEARCH_PROJECT_ORDER:0 "โครงการวิจัยพิเศษ"
- RESEARCH_PROJECT_ORDER_DESC:0 "Order the ship to research a Special Project."
+ RESEARCH_PROJECT_ORDER_DESC:0 "สั่งให้ยานทำวิจัยโครงการพิเศษ"
  RESEARCH_DESC:0 "The ship will resume its previous Actions when done."
  AUTO_EXPLORE_ORDER:2 "ระบบควบคุมอัตโนมัติยานวิจัยวิทยาศาสตร์"
  AUTO_EXPLORE_ORDER_DESC:3 "สั่งให้ยานวิจัยวิทยาศาสตร์สำรวจกาแล็กซีอัตโนมัติ ตรวจสอบความผิดปกติ วิจัยโปรเจ็กพิเศษหรือขุดค้นแหล่งโบราณคดีและหลีกเลี่ยงเมื่อพบศัตรู"
  AUTO_PATROL_ORDER:0 "ลาดตระเวนแบบอัตโนมัติ"
  LACKING_REQS:0 "§RLacking requirements for Special Project§!"
  COLONIZE_ORDER:0 "ตั้งอาณานิคม"
- TILE_HAS_BLOCKER:0 "Tile has blocker"
+ TILE_HAS_BLOCKER:0 "ภูมิประเทศมีสิ่งกีดขวาง"
  COLONIZE_ORDER_DESC:0 "Order the Colony Ship to begin colonization of a planet."
  BUILD_RESEARCH_STATION_ORDER:0 "สร้างสถานีวิจัย"
  BUILD_RESEARCH_STATION_ORDER_MULT:0 "สร้างสถานีวิจัย $NUM$ สถานี"
@@ -7905,7 +7905,7 @@
  unity_desc_machine_intelligence: "$unity_desc_start$ £building£ §H$building_uplink_node_plural$§! $unity_desc_end$"
  consumer_goods:0 "สินค้าอุปโภคบริโภค"
  consumer_goods_desc_start: "§E§H$consumer_goods$§! (£consumer_goods£) เป็นทรัพยากรขั้นสูงที่รวมไปถึงอุปกรณ์ต่างๆที่มีความหรูหรา และสินค้าที่จำเป็นในการทำให้ £pop£ §Hประชากร§! มีชีวิตที่ดี"
- consumer_goods_desc_end: "$tt_gain$§Y-§! สร้าง £building£ §HCivilian Industries§! $tt_colonies$\n§Y-§! สร้าง £district£ §H$district_industrial_plural$§! $tt_colonies$\n§Y-§! $tt_market$"
+ consumer_goods_desc_end: "$tt_gain$§Y-§! สร้าง £building£ §Hอุตสาหกรรมพลเรือน§! $tt_colonies$\n§Y-§! สร้าง £district£ §H$district_industrial_plural$§! $tt_colonies$\n§Y-§! $tt_market$"
  consumer_goods_desc:3 "$consumer_goods_desc_start$\n\nพวกมันจำเป็นในการดำเนิน £job£ §Hงาน§! บางอย่าง, เช่น £job_researcher£ §H$job_researcher$§! หรือ £job_priest£ §H$job_priest$§!$consumer_goods_desc_end$"
  consumer_goods_desc_hive_mind: "$tt_no_need_hive$\n\n$consumer_goods_desc$"
  consumer_goods_desc_machine_intelligence: "$tt_some_need_machine$\n\n$consumer_goods_desc_start$\n\n§H$auth_machine_intelligence_plural$§! พร้อมกับ §H$civic_machine_obsessional_directive$§! ผลิต §H$consumer_goods$§!, เช่นเดียวกับที่ทำ §H$civic_machine_servitor_plural$§! สำหรับ §Hประชากร $citizenship_organic_trophy$ ของพวกเขา§!$consumer_goods_desc_end$"
@@ -12402,7 +12402,7 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.74.1, Update 11/10/2024"
+ MOD_VERSION:0 "Mod v0.74.2, Update 26/10/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Cosmic Storm -> พายุคอสมิก,พายุอวกาศ \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord, The Machine Age \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
