--- a/mod/thmod/localisation/english/machine_age_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_l_english.yml
@@ -2451,7 +2451,7 @@
  leader_trait_virtual: "ผู้นำเสมือนจริง"
  leader_trait_virtual_desc: "This virtual leader has unparalleled access to a wide range of advanced algorithms."
  council_agenda_agenda_virtuality_optimized_network_name: "ปรับเครือข่ายให้เหมาะสม"
- council_agenda_agenda_virtuality_optimized_network_desc: "Optimizing our data structures will allow both increased performance and security when accessing remote worksites"
+ council_agenda_agenda_virtuality_optimized_network_desc: "การปรับปรุงโครงสร้างข้อมูลของเราจะช่วยเพิ่มประสิทธิภาพและความปลอดภัยในการเข้าถึงสถานที่ทำงานระยะไกล"
  agenda_virtuality_optimized_network_finish: "$council_agenda_agenda_virtuality_optimized_network_name$ $agenda_ref$"
  agenda_virtuality_optimized_network_finish_desc: "$council_agenda_agenda_virtuality_optimized_network_desc$"
  tradition_nanotech: "นาโนเทค"
@@ -2566,7 +2566,7 @@
  MESSAGE_NANOTECH_BOON_TITLE: "Nanite Swarms Grow"
  MESSAGE_NANOTECH_BOON_DESC: "Our harvesting swarms have generated a surplus of nanites."
  council_agenda_agenda_nanotech_unstoppable_swarm_name: "ฝูงที่ไม่ใครสามารถหยุดได้"
- council_agenda_agenda_nanotech_unstoppable_swarm_desc: "We shall ensure that our swarm will blot out the stars themselves."
+ council_agenda_agenda_nanotech_unstoppable_swarm_desc: "เราจะทำให้แน่ใจว่าฝูงของเราจะทำลายดวงดาวเหล่านั้นได้"
  agenda_nanotech_unstoppable_swarm_finish: "$council_agenda_agenda_nanotech_unstoppable_swarm_name$ $agenda_ref$"
  agenda_nanotech_unstoppable_swarm_finish_desc: "$council_agenda_agenda_nanotech_unstoppable_swarm_desc$"
  mod_ship_nanite_swarmer_cost_mult: "$nanite_swarmer$ ค่าใช้จ่ายในการสร้าง"
@@ -2597,7 +2597,7 @@
  tr_modularity_5_modifier_desc: "ปลดล็อกคุณลักษณะ §Yขั้นสูง§! สำหรับการปรับเปลี่ยนเผ่าพันธุ์"
  tr_modularity_finish_modifier_desc: "ผู้นำ §Y$trait_machine_unit$§! ทั้งหมดได้รับคุณลักษณะ §Y$leader_trait_synthetic$§!"
  council_agenda_agenda_modularity_reshape_form_name: "ปรับรูปร่างใหม่"
- council_agenda_agenda_modularity_reshape_form_desc: "Utilizing $sr_living_metal$ to reshape our population allows for increased efficiency in the upkeep and adaptability of our machine bodies."
+ council_agenda_agenda_modularity_reshape_form_desc: "การใช้$sr_living_metal$เพื่อปรับโครงสร้างประชากรของเราทำให้มีประสิทธิภาพมากขึ้นในการบำรุงรักษาและปรับตัวของตัวเครื่องจักรของเรา"
  agenda_modularity_reshape_form_finish: "$council_agenda_agenda_modularity_reshape_form_name$ $agenda_ref$"
  agenda_modularity_reshape_form_finish_desc: "$council_agenda_agenda_modularity_reshape_form_desc$"
  mod_planet_jobs_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ จากงาน £job£"
