--- a/mod/thmod/localisation/english/situations_l_english.yml
+++ b/mod/thmod/localisation/english/situations_l_english.yml
@@ -26,7 +26,7 @@
  CLICK_TO_EXPAND_OR_COLLAPSE:0 "§GClick to collapse or expand the section.§!"
  PREDICTED_OUTCOME:0 "Predicted Outcome"
  ACTIVE_STAGE:0 "ปัจจุบันใช้งานอยู่"
- SITUATION_APPROACH_UNAVAILABLE:0 "§RThis Approach cannot be picked for the following reason:§!"
+ SITUATION_APPROACH_UNAVAILABLE:0 "§Rไม่สามารถเลือกวิธีการนี้ได้เนื่องจากเหตุผลดังต่อไปนี้:§!"
  SITUATION_APPROACH_LOCKED:0 "§RWe cannot change Approaches to this Situation.§!"
  SITUATION_APPROACH_LOCKED_TIMED:0 "§RWe will not be able to change Approaches to this Situation for $MONTHS|Y$ month(s).§!"
  OUTLINER_SITUATION_PROGRESS:0 "$PROGRESS|Y$% progress towards the predicted outcome."
@@ -58,16 +58,16 @@
  approach_default:2 "ไม่ทำอะไร"
  approach_encourage:1 "ส่งเสริมสนับสนุน"
  approach_discourage:1 "กีดกัน"
- stage_1:1 "Stage I"
- stage_2:1 "Stage II"
- stage_3:1 "Stage III"
- stage_4:1 "Stage IV"
- stage_5:1 "Stage V"
- stage_6:0 "Stage VI"
- stage_7:0 "Stage VII"
- stage_8:0 "Stage VIII"
- stage_9: "Stage IX"
- stage_10: "Stage X"
+ stage_1:1 "ระยะที่ I"
+ stage_2:1 "ระยะที่ II"
+ stage_3:1 "ระยะที่ III"
+ stage_4:1 "ระยะที่ IV"
+ stage_5:1 "ระยะที่ V"
+ stage_6:0 "ระยะที่ VI"
+ stage_7:0 "ระยะที่ VII"
+ stage_8:0 "ระยะที่ VIII"
+ stage_9: "ระยะที่ IX"
+ stage_10: "ระยะที่ X"
  stage_2_alt:0 "$stage_2$"
  stage_3_alt:0 "$stage_3$"
  string_current_approach:0 "แนวทางปัจจุบัน"
